overflow fix

--- a/app/client/src/pages/admin/Pages/Categories/Template/style.module.css
+++ b/app/client/src/pages/admin/Pages/Categories/Template/style.module.css
@@ -10,6 +10,7 @@
     flex-direction: row;
     flex-grow: 1;
     gap: 24px;
+    overflow-y: auto;
 }
 
 .contentTemplate {
